--- a/src/components/POPOSList/POPOSList.css
+++ b/src/components/POPOSList/POPOSList.css
@@ -1,7 +1,22 @@
 .POPOSList {
-  width: calc(100% - 80px);
-  margin: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2em;
+  max-width: 1200px;
+  margin: auto;
+  padding: 2em;
+}
+
+/* Smaller screens and tablets */
+@media only screen and (max-width: 960px) {
+  .POPOSList {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  .POPOSList {
+    grid-template-columns: 1fr;
+  }
 }
