--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -6,7 +6,7 @@
   align-items: baseline;
   padding: 1em;
   margin-bottom: 2em;
-  background-color: rgb(192, 45, 26);
+  background-color: #38bdf8;
   color: #fff;
 }
 
@@ -24,5 +24,15 @@
 }
 
 .Title-Subtitle {
-  color: rgba(255, 255, 255, 0.75);
+  color: #fff;
+  background-color: #94a3b8;
+  width: fit-content;
+  margin: 0.25rem auto;
+  padding: 0.5rem;
+  letter-spacing: 0.5rem;
+}
+
+.Title-Nav {
+  display: flex;
+  justify-content: space-between;
 }
