--- a/src/components/App.css
+++ b/src/components/App.css
@@ -61,8 +61,23 @@ h6 {
   isolation: isolate;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
 .App {
   text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
