--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@
   align-items: baseline;
   padding: 1em;
   margin-top: 2em;
-  background-color: rgb(192, 45, 26);
-  color: rgba(255, 255, 255, 0.75);
+  background-color: #38bdf8;
+  color: #fff;
+  margin-top: auto;
 }
