--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
   align-items: baseline;
   padding: 1em;
   margin-top: 2em;
-  background-color: #38bdf8;
+  background-color: #075985;
   color: #fff;
   margin-top: auto;
 }
