--- a/src/components/RandomSpace/RandomSpace.css
+++ b/src/components/RandomSpace/RandomSpace.css
@@ -14,3 +14,11 @@
   font-weight: bold;
   text-decoration: none;
 }
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  .RandomSpace {
+    font-size: 0.75rem;
+    white-space: nowrap;
+  }
+}
