--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 1em;
   margin-bottom: 2em;
-  background-color: #38bdf8;
+  background-color: #075985;
   color: #fff;
 }
 
@@ -35,4 +35,21 @@
   margin: 0.1rem auto;
   padding: 0.1rem;
   letter-spacing: 0.5rem;
+  white-space: nowrap;
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  .Title h1 {
+    font-size: 1rem;
+  }
+
+  .Title h2 {
+    font-size: 0.75rem;
+    letter-spacing: normal;
+  }
+
+  .Title a {
+    font-size: 0.75rem;
+  }
 }
